--- a/Course3/conFusion/app/views/home.html
+++ b/Course3/conFusion/app/views/home.html
@@ -6,7 +6,19 @@
                 <h3 align=center>Our Lipsmacking Culinary Creations</h3>
             </div>
             <div class="col-xs-12 col-sm-9 col-sm-pull-3">
-				<h4>Implement the Featured Dish Here</h4>
+              <div class="media">
+                      <div class="media-left media-middle">
+                          <a ui-sref="app.dishdetails({id: firstDish._id})">
+                          <img class="media-object img-thumbnail"
+                           src="{{firstDish.image}}" alt="Uthappizza">
+                          </a>
+                      </div>
+                      <div class="media-body">
+                          <h2 class="media-heading">{{firstDish.name}}<span class="label label-danger">{{firstDish.label}}</span> <span class="badge">{{firstDish.price}}</span></h2>
+                          <p>{{firstDish.description}}</p>
+                          <p><a ui-sref="app.dishdetails({id: firstDish._id})" class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
+                      </div>
+                    </div>
             </div>
         </div>
 
@@ -17,7 +29,19 @@
                 <h3 align=center>This Month's Promotions</h3>
             </div>
             <div class="col-xs-12 col-sm-9">
-				<h4>Implement the Promotion Here</h4>
+              <div class="media">
+                 <div class="media-body">
+                     <h2 class="media-heading">{{promotion.name}}<span class = "label label-danger">{{promotion.label}}</span></h2>
+                     <p>{{promotion.description}}</p>
+                     <p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
+                 </div>
+                 <div class="media-right media-middle">
+                     <a href="#">
+                     <img class="media-object img-thumbnail"
+                      src="{{promotion.image}}" alt="buffet">
+                     </a>
+                 </div>
+               </div>
             </div>
         </div>
 
@@ -27,7 +51,22 @@
                 <h3 align=center>Meet our Culinary Specialists</h3>
             </div>
             <div class="col-xs-12 col-sm-9 col-sm-pull-3">
-				<h4>Implement the Executive Chef Info Here</h4>
+              <div class="media">
+                      <div class="media-left media-middle">
+                          <a href="#">
+                          <img class="media-object img-thumbnail"
+                           src="{{execChef.image}}" alt="{{execChef.name}}">
+                          </a>
+                      </div>
+                      <div class="media-body">
+                          <h2 class="media-heading">{{execChef.name}}</h2>
+                          <h4>{{execChef.designation}}</h4>
+                          <p>{{execChef.description}}
+                          </p>
+                          <p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
+                      </div>
+                    </div>
+
             </div>
         </div>
     </div>
